controllers casi corregidos